--- a/htdocs/source/module/user/view/login.phtml
+++ b/htdocs/source/module/user/view/login.phtml
@@ -14,7 +14,7 @@ global $_u,$_p;
             <form action="<?= PAGE_BASE; ?>login" method="POST">
                 <div class="row oh">
                     <div class="well">
-                        <h3><strong>ORB</strong> relay login</h3>
+                        <h3>Login</h3>
                     </div>
                     <div class="col-md-12">
                         <div>
