--- a/htdocs/source/module/admin/view/show/form.phtml
+++ b/htdocs/source/module/admin/view/show/form.phtml
@@ -5,7 +5,7 @@
         <div class="col-lg-3 col-md-6">
             <div class="row">
                 <h3>Show</h3>
-                <div class="col-xs-12">
+                <div class="col-xs-12"  data-toggle="tooltip" title="Name of the Show."  data-placement="bottom">
                     <label for="showForm[name]">Name</label>
                     <input class="form-control fat" name="showForm[name]" value="<?= $show['name']; ?>">
                 </div>
@@ -18,7 +18,7 @@
                         <? endforeach; ?>
                     </select>
                 </div>*/?>
-                <div class="col-xs-8">
+                <div class="col-xs-8"  data-toggle="tooltip" title="File Folder where the MP3s are stored"  data-placement="bottom">
                     <label for="showForm[folder]">Folder</label>
                     <select class="form-control" name="showForm[folder]">
                         <option value="">...</option>
@@ -27,8 +27,8 @@
                         <? endforeach; ?>
                     </select>
                 </div>
-                <div class="col-xs-4">
-                    <label for="showForm[recursive]">Recursive</label>
+                <div class="col-xs-4"data-toggle="tooltip" title="Fetch Subfolders"  data-placement="bottom">
+                    <label for="showForm[recursive]" >Recursive</label>
                     <select class="form-control" name="showForm[recursive]">
                         <option value="">...</option>
                         <option value="1" <? if("1" == $show['recursive']) :?> selected <? endif ;?>>Yes</option>
@@ -39,11 +39,11 @@
                     <label for="showForm[name]">Description</label>
                     <textarea class="form-control" name="showForm[description]" value="<?= $show['description']; ?>"></textarea>
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-6" data-toggle="tooltip" title="Format: #000000"  data-placement="bottom">
                     <label for="showForm[color]">Color</label>
                     <input class="form-control" name="showForm[color]" value="<?= $show['color']; ?>">
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-6" data-toggle="tooltip" title="Suppress shuffle"  data-placement="bottom" >
                     <label for="showForm[no_shuffle]">No Shuffle</label>
                     <select class="form-control" name="showForm[no_shuffle]">
                         <option value="">...</option>
@@ -56,7 +56,7 @@
         <div class="col-lg-3 col-md-6">
             <div class="row">
                 <h3>Hot Rotation</h3>
-                 <div class="col-xs-6">
+                 <div class="col-xs-6" data-toggle="tooltip" title="Turn it on or off. "  data-placement="bottom" >
                     <label for="showForm[hot_rotation][enable]">Enable</label>
                     <select class="form-control" name="showForm[hot_rotation][enable]">
                         <option value="">...</option>
@@ -64,19 +64,27 @@
                         <option value="0" <? if("0" == $show['hot_rotation']['enable']) :?> selected <? endif ;?>>No</option>
                     </select>
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-6" data-toggle="tooltip" title="Play only Hot Rotation Files"  data-placement="bottom" >
+                    <label for="showForm[hot_rotation][only]">Only</label>
+                    <select class="form-control" name="showForm[hot_rotation][only]">
+                        <option value="">...</option>
+                        <option value="1" <? if("1" == $show['hot_rotation']['only']) :?> selected <? endif ;?>>Yes</option>
+                        <option value="0" <? if("0" == $show['hot_rotation']['only']) :?> selected <? endif ;?>>No</option>
+                    </select>
+                </div>
+                <div class="col-xs-6" data-toggle="tooltip" title="Count of latest Tracks. 0 or empty disable it."  data-placement="bottom" >
                     <label for="showForm[hot_rotation][song_num]">Latest Tracks</label>
                     <input class="form-control tac" name="showForm[hot_rotation][song_num]" value="<?= $show['hot_rotation']['song_num']; ?>">
                 </div>
-                 <div class="col-xs-6">
-                    <label for="showForm[hot_rotation][at_beginning]">At Beginning</label>
+                 <div class="col-xs-6" data-toggle="tooltip" title="Place all fetched Files on top of the Playlist."  data-placement="bottom" >
+                    <label for="showForm[hot_rotation][at_beginning]" >At Beginning</label>
                     <select class="form-control" name="showForm[hot_rotation][at_beginning]">
                         <option value="">...</option>
                         <option value="1" <? if("1" == $show['hot_rotation']['at_beginning']) :?> selected <? endif ;?>>Yes</option>
                         <option value="0" <? if("0" == $show['hot_rotation']['at_beginning']) :?> selected <? endif ;?>>No</option>
                     </select>
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-6"data-toggle="tooltip" title="Play the Beginning Block randomly."  data-placement="bottom" >
                     <label for="showForm[hot_rotation][shuffle_beginning]">Shuffle Beginning</label>
                     <select class="form-control" name="showForm[hot_rotation][shuffle_beginning]">
                         <option value="">...</option>
@@ -85,90 +93,51 @@
                     </select>
                 </div>
                 
-                <div class="col-xs-6">
+                <div class="col-xs-6" data-toggle="tooltip" title="Only Files under this Age in Days."  data-placement="bottom" >
                     <label for="showForm[hot_rotation][song_age_days]">Song Age Days</label>
                     <input class="form-control tac" name="showForm[hot_rotation][song_age_days]" value="<?= $show['hot_rotation']['song_age_days']; ?>">
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-6"data-toggle="tooltip" title="How often is this Block in the Playlist?"  data-placement="bottom" >
                     <label for="showForm[hot_rotation][insert_multiplier]">Insert Multiplier</label>
                     <input class="form-control tac" name="showForm[hot_rotation][insert_multiplier]" value="<?= $show['hot_rotation']['insert_multiplier']; ?>">
-                </div>        
+                </div>
+                <div class="col-xs-12">
+                &nbsp;
+                </div>     
+                <div class="col-xs-12">
+                    <? if($show['name']) : ?>
+                    <a href="#" class="btn btn-primary" id="button-hot-rotation">show only hot rotation</a>
+                    <? endif; ?>
+                </div>
                 
             </div>
         </div>
-        
-        <div class="col-lg-3 col-md-6">
-            <div class="row">
-                <h3>Spots</h3>
-                 <div class="col-xs-12">
-                    <label for="showForm[spot][folder]">Folder</label>
-                    <select class="form-control" name="showForm[spot][folder]">
-                        <option>...</option>
-                        <? foreach($action['folder']['spot'] as $folder) : ?>
-                        <option value="<?= $folder; ?>" <? if($folder == $show['spot']['folder']) :?> selected <? endif ;?>><?= $folder; ?></option>
-                        <? endforeach; ?>
-                    </select>
-                </div>
-                <div class="col-xs-6">
-                    <label for="showForm[spot][every_nth_song]">Every nth Song</label>
-                    <input class="form-control tac" name="showForm[spot][every_nth_song]" value="<?= $show['spot']['every_nth_song']; ?>">
-                </div>
-                <div class="col-xs-6">
-                    <label for="showForm[spot][offset]">Offset</label>
-                    <input class="form-control tac" name="showForm[spot][offset]" value="<?= $show['spot']['offset']; ?>">
-                </div>
-                <div class="col-xs-6">
-                    <label for="showForm[spot][shuffle_beginning]">Shuffle Beginning</label>
-                    <select class="form-control" name="showForm[spot][shuffle_beginning]">
-                        <option value="">...</option>
-                        <option value="1" <? if("1" == $show['spot']['shuffle_beginning']) :?> selected <? endif ;?>>Yes</option>
-                        <option value="0" <? if("0" == $show['spot']['shuffle_beginning']) :?> selected <? endif ;?>>No</option>
-                    </select>
-                </div>
-                <div class="col-xs-6">
-                    <label for="showForm[spot][order]">Order</label>
-                    <select class="form-control" name="showForm[spot][order]">
-                        <option value="">...</option>
-                        <option value="shuffle" <? if('shuffle' == $show['spot']['order']) :?> selected <? endif ;?>>Shuffle</option>
-                        <option value="time" <? if('time' == $show['spot']['order']) :?> selected <? endif ;?>>Linear</option>
-                    </select>
-                </div>
-                <div class="col-xs-6">
-                    <label for="showForm[spot][order_by]">Order by</label>
-                    <select class="form-control" name="showForm[spot][order_by]">
-                        <option value="">...</option>
-                        <option value="time" <? if('time' == $show['spot']['order_by']) :?> selected <? endif ;?>>Time</option>
-                        <option value="alpha" <? if('alpha' == $show['spot']['order_by']) :?> selected <? endif ;?>>Alphabet</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-        
-        
-         
+
         <div class="col-lg-2 col-md-6">   
             <div class="row">
                 <h3>Podcast</h3>
-                <label for="showForm[podcast][folder]">Folder</label>
+                <div class="col-xs-12"data-toggle="tooltip" title="Folder on your Disk."  data-placement="bottom">
+                    <label for="showForm[podcast][folder]">Folder</label>
                     <select class="form-control" name="showForm[podcast][folder]">
                         <option>...</option>
                         <? foreach($action['folder']['podcast'] as $folder) : ?>
                         <option value="<?= $folder; ?>" <? if($folder == $show['podcast']['folder']) :?> selected <? endif ;?>><?= $folder; ?></option>
                         <? endforeach; ?>
                     </select>
-                <div class="col-xs-6">
+                 </div>   
+                <div class="col-xs-6"data-toggle="tooltip" title="Place a Podcast every X Tracks, after adding Hot Rotation"  data-placement="bottom">
                     <label for="showForm[podcast][every_nth_song]">Every nth Song</label>
                     <input class="form-control tac" name="showForm[podcast][every_nth_song]" value="<?= $show['podcast']['every_nth_song']; ?>">
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-6"data-toggle="tooltip" title="Playlist Number of the first Podcast."  data-placement="bottom">
                     <label for="showForm[podcast][offset]">Offset</label>
                     <input class="form-control tac" name="showForm[podcast][offset]" value="<?= $show['podcast']['offset']; ?>">
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-6"data-toggle="tooltip" title="Count of latest Tracks. 0 or empty disable it."  data-placement="bottom">
                     <label for="showForm[podcast][cast_num]">Latest Tracks</label>
                     <input class="form-control tac" name="showForm[podcast][cast_num]" value="<?= $show['podcast']['cast_num']; ?>">
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-6"data-toggle="tooltip" title="Play randomly the first Track. Then play it chronological."  data-placement="bottom">
                     <label for="showForm[podcast][random_first]">Random First</label>
                     <select class="form-control" name="showForm[podcast][random_first]">
                         <option value="">...</option>
@@ -181,10 +150,57 @@
             <input type="hidden" name="showForm[file_name]" value="<?= $show['file_name']; ?>">
        </div>
        
-       <div class="col-lg-1 col-md-3">  
+       <div class="col-lg-2 col-md-6">
+            <div class="row">
+                <h3>Spots</h3>
+                 <div class="col-xs-12" data-toggle="tooltip" title="File Folder where the MP3s are stored"  data-placement="bottom">
+                    <label for="showForm[spot][folder]">Folder</label>
+                    <select class="form-control" name="showForm[spot][folder]">
+                        <option>...</option>
+                        <? foreach($action['folder']['spot'] as $folder) : ?>
+                        <option value="<?= $folder; ?>" <? if($folder == $show['spot']['folder']) :?> selected <? endif ;?>><?= $folder; ?></option>
+                        <? endforeach; ?>
+                    </select>
+                </div>
+                <div class="col-xs-6" data-toggle="tooltip" title="Place a Spot every X Tracks, after adding Hot Rotation and Podcast."  data-placement="bottom">
+                    <label for="showForm[spot][every_nth_song]">Every nth Song</label>
+                    <input class="form-control tac" name="showForm[spot][every_nth_song]" value="<?= $show['spot']['every_nth_song']; ?>">
+                </div>
+                <div class="col-xs-6" data-toggle="tooltip" title="Playlist Number of the first Spot"  data-placement="bottom">
+                    <label for="showForm[spot][offset]">Offset</label>
+                    <input class="form-control tac" name="showForm[spot][offset]" value="<?= $show['spot']['offset']; ?>">
+                </div>
+                <div class="col-xs-6" data-toggle="tooltip" title="Playing the first Spot randomly. The others by Order and Order By."  data-placement="bottom">
+                    <label for="showForm[spot][shuffle_beginning]">Shuffle Beginning</label>
+                    <select class="form-control" name="showForm[spot][shuffle_beginning]">
+                        <option value="">...</option>
+                        <option value="1" <? if("1" == $show['spot']['shuffle_beginning']) :?> selected <? endif ;?>>Yes</option>
+                        <option value="0" <? if("0" == $show['spot']['shuffle_beginning']) :?> selected <? endif ;?>>No</option>
+                    </select>
+                </div>
+                <div class="col-xs-6" data-toggle="tooltip" title="Order"  data-placement="bottom">
+                    <label for="showForm[spot][order]">Order</label>
+                    <select class="form-control" name="showForm[spot][order]">
+                        <option value="">...</option>
+                        <option value="shuffle" <? if('shuffle' == $show['spot']['order']) :?> selected <? endif ;?>>Shuffle</option>
+                        <option value="time" <? if('time' == $show['spot']['order']) :?> selected <? endif ;?>>Linear</option>
+                    </select>
+                </div>
+                <div class="col-xs-6" data-toggle="tooltip" title="Order by"  data-placement="bottom">
+                    <label for="showForm[spot][order_by]">Order by</label>
+                    <select class="form-control" name="showForm[spot][order_by]">
+                        <option value="">...</option>
+                        <option value="time" <? if('time' == $show['spot']['order_by']) :?> selected <? endif ;?>>Time</option>
+                        <option value="alpha" <? if('alpha' == $show['spot']['order_by']) :?> selected <? endif ;?>>Alphabet</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+       
+       <div class="col-lg-2 col-md-3">  
             <div class="row">
                 <h3>Intro</h3>
-                <div class="col-xs-12">
+                <div class="col-xs-12"data-toggle="tooltip" title="File Folder where the MP3s are stored"  data-placement="bottom">
                     <label for="showForm[intro][folder]">Folder</label>
                     <select class="form-control" name="showForm[intro][folder]">
                         <option>...</option>
@@ -193,7 +209,7 @@
                         <? endforeach; ?>
                     </select>
                 </div>
-                <div class="col-xs-12">
+                <div class="col-xs-12"data-toggle="tooltip" title="Do it randomly."  data-placement="bottom">
                     <label for="showForm[intro][random]">Random</label>
                     <select class="form-control" name="showForm[intro][random]">
                         <option>...</option>
