--- a/htdocs/source/module/main/view/home.phtml
+++ b/htdocs/source/module/main/view/home.phtml
@@ -1,1 +1,22 @@
-home
+<?
+$weekday = date("N");
+$s = $action['schedule'][$weekday];
+$c = count($s);
+?>
+<div class="schedule-row">
+    <div class="col-xs-12 schedule-day-col">
+    <? foreach($s as $item) : ?>
+        <div class="schedule-item" style="width:<?= 100/$c; ?>%" data-percent="<?= $item['start_percent']; ?>" data-weekday="<?= $weekday; ?>" data-hour="<?= $item['h']; ?>" data-minute="<?= $item['m']; ?>" data-show="<?= $item['show']; ?>">
+            <div class="inner">
+            <span class="schedule-title"" data-show="<?= $item['show']; ?>" style="border-bottom:2px solid <?= $action['shows'][$item['show']]['color']; ?>;"><strong><?= $item['show']; ?></strong>
+            <span class="time"><?= $item['h'] . ':' . fillLeadingZero($item['m']); ?></span></span>
+        </div>
+        </div>
+    <? endforeach; ?>
+    </div>
+</div>
+<script>
+    $(window).on('ready', function(){
+        
+    });
+</script>
