--- a/src/source/module/main/view/home.phtml
+++ b/src/source/module/main/view/home.phtml
@@ -1,11 +1,15 @@
 <?
 $weekday = date("N");
 $s = $action['schedule'][$weekday];
+foreach($s as $k=>$i)
+    $s[$k]['timesort'] = 'ts'.fillLeadingZero($i['h']).fillLeadingZero($i['m']);
+
+$ss = ksortBy($s, 'timesort');
 $c = count($s);
 ?>
 <div class="schedule-row">
     <div class="col-xs-12 schedule-day-col">
-    <? foreach($s as $item) : ?>
+    <? foreach($ss as $item) : ?>
         <div class="schedule-item" style="width:<?= 100/$c; ?>%" data-percent="<?= $item['start_percent']; ?>" data-weekday="<?= $weekday; ?>" data-hour="<?= $item['h']; ?>" data-minute="<?= $item['m']; ?>" data-show="<?= $item['show']; ?>">
             <div class="inner">
             <span class="schedule-title"" data-show="<?= $item['show']; ?>" style="border-bottom:2px solid <?= $action['shows'][$item['show']]['color']; ?>;"><strong><?= $item['show']; ?></strong>
