--- a/src/css/page.less
+++ b/src/css/page.less
@@ -1,15 +1,52 @@
-
-.schedule-item {
-  overflow:hidden;
-  float:left;
-  .inner {
-    height:200px; width:200px; overflow:hidden;
-    position:relative;
-    .schedule-title {
-      position:absolute;
-      bottom:5px;
-      width:100%;
+.home{
+  .show-row {
+    .show-title {
+      font-size:7em;
+      font-weight:bold;
+      letter-spacing:-0.02em;
       text-align:center;
     }
+  }
+  .title-row {
+    background-color:rgba(0,0,0,0.1);
+    .song-title {
+      font-size:3em;
+      letter-spacing:-0.02em;
+      text-align:center;
+    }
+  }
+  .schedule-row {
+    margin-bottom:70px; 
+    overflow:hidden;
+    background-color:rgba(0,0,0,0.1);
+    .schedule-item {
+      overflow:hidden;
+      float:left;
+      
+      .inner {
+        height:200px;
+        width:100%;
+        overflow:hidden;
+        position:relative;
+        .schedule-title {
+          position:absolute;
+          transform:rotate(90deg);
+          width:200px;
+          left:-85px;
+          top:95px;
+          
+        }
+      }
+    }
+  }
+  
+  .next-button-row {
+    margin-top:20px;
+    text-align:center;
+  }
+  
+  .schedule-marker {
+    position:absolute;
+    margin-top:-70px;
   }
 }
