--- a/htdocs/css/page.css
+++ b/htdocs/css/page.css
@@ -42,3 +42,35 @@
   position: absolute;
   margin-top: -70px;
 }
+/* Custom, iPhone Retina */
+@media only screen and (min-width: 320px) {
+  .home .show-row .show-title {
+    font-size: 3em;
+  }
+  .home .title-row .song-title {
+    font-size: 1em;
+    padding: 5px;
+  }
+}
+/* Extra Small Devices, Phones */
+@media only screen and (max-width: 479px) {
+  .home .schedule-marker {
+    display: none;
+  }
+  .home .schedule-row {
+    display: none;
+  }
+  .home .schedule-row .schedule-item {
+    width: 100%;
+  }
+  .home .schedule-row .schedule-item .inner .schedule-title {
+    transform: rotate(0deg);
+    left: inherit;
+    top: inherit;
+    width: inherit;
+  }
+}
+/* Extra Small Devices, Phones */
+/* Small Devices, Tablets */
+/* Medium Devices, Desktops */
+/* Large Devices, Wide Screens */
