--- a/src/css/page.less
+++ b/src/css/page.less
@@ -1,3 +1,5 @@
+
+
 .home{
   .show-row {
     .show-title {
@@ -49,4 +51,65 @@
     position:absolute;
     margin-top:-70px;
   }
+}
+
+/* Custom, iPhone Retina */ 
+@media only screen and (min-width : 320px) {
+  .home{
+    .show-row {
+      .show-title {
+        font-size:3em;      
+      }
+    }
+    .title-row {
+      .song-title{
+        font-size:1em;
+        padding:5px;
+      } 
+    }
+  }
+}
+
+/* Extra Small Devices, Phones */ 
+@media only screen and (max-width : 479px) {
+  .home{
+    .schedule-marker {
+      display:none;
+    }
+    
+    .schedule-row {
+      display:none;
+      .schedule-item {
+        width:100%;
+        .inner {
+          .schedule-title {
+            transform:rotate(0deg);
+            left:inherit;
+            top:inherit;
+            width:inherit;
+          }
+        }
+      }
+    }
+  }
+}
+
+/* Extra Small Devices, Phones */ 
+@media only screen and (min-width : 480px) {
+  
+}
+
+/* Small Devices, Tablets */
+@media only screen and (min-width : 768px) {
+
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width : 992px) {
+
+}
+
+/* Large Devices, Wide Screens */
+@media only screen and (min-width : 1200px) {
+
 }
