--- a/htdocs/css/page.css
+++ b/htdocs/css/page.css
@@ -43,7 +43,32 @@
   margin-top: -70px;
 }
 /* Custom, iPhone Retina */
-@media only screen and (min-width: 320px) {
+@media only screen and (max-width: 479px) {
+  .schedule-marker {
+    display: none;
+  }
+  .schedule-row {
+    display: none;
+  }
+}
+/* Extra Small Devices, Phones */
+@media only screen and (max-width: 767px) {
+  .header-right .main-navigation {
+    margin-top: 50px;
+  }
+  .header-right .main-navigation li {
+    margin-bottom: 5px;
+  }
+  .header-right .main-navigation li a {
+    line-height: 1em;
+    font-size: 1em;
+  }
+  .schedule-item .inner .schedule-title {
+    font-size: 0.8em;
+  }
+  .page-header .header-left h2 {
+    font-size: 1em;
+  }
   .home .show-row .show-title {
     font-size: 3em;
   }
@@ -52,23 +77,8 @@
     padding: 5px;
   }
 }
-/* Extra Small Devices, Phones */
-@media only screen and (max-width: 479px) {
-  .home .schedule-marker {
-    display: none;
-  }
-  .home .schedule-row {
-    display: none;
-  }
-  .home .schedule-row .schedule-item {
-    width: 100%;
-  }
-  .home .schedule-row .schedule-item .inner .schedule-title {
-    transform: rotate(0deg);
-    left: inherit;
-    top: inherit;
-    width: inherit;
-  }
+.well {
+  background-color: rgba(0, 0, 0, 0.1);
 }
 /* Extra Small Devices, Phones */
 /* Small Devices, Tablets */
