--- a/htdocs/source/module/admin/view/header-main-navigation.phtml
+++ b/htdocs/source/module/admin/view/header-main-navigation.phtml
@@ -3,6 +3,6 @@
     <li><a href="<?= PAGE_BASE; ?>admin/show"><i class="fa fa-hand-spock-o"></i> Shows</a></li>
     <li><a href="<?= PAGE_BASE; ?>admin/schedule"><i class="fa fa-calendar"></i> Schedule</a></li>
     <li><a href="<?= PAGE_BASE; ?>admin/podcast"><i class="fa fa-rss"></i> Podcasts</a></li>
-    <? /*<li><a href="<?= PAGE_BASE; ?>admin/station"><i class="fa fa-bullseye"></i> Stations</a></li> */ ?>
+    <li><a href="<?= PAGE_BASE; ?>admin/station"><i class="fa fa-bullseye"></i> Station</a></li>
     <li><a href="<?= PAGE_BASE; ?>admin/config"><i class="fa fa-gears"></i> Config</a></li>
 </ul>
