--- a/htdocs/source/module/admin/view/header-main-navigation.phtml
+++ b/htdocs/source/module/admin/view/header-main-navigation.phtml
@@ -1,8 +1,12 @@
+<?php global $_u; ?>
 <a href="" class="btn btn-primary button-close" id="button-close-mainmenu"><i class="fa fa-times"></i></a>
-<ul class="main-navigation">
-    <li><a href="<?= PAGE_BASE; ?>admin/show"><i class="fa fa-hand-spock-o"></i> Shows</a></li>
-    <li><a href="<?= PAGE_BASE; ?>admin/schedule"><i class="fa fa-calendar"></i> Schedule</a></li>
-    <li><a href="<?= PAGE_BASE; ?>admin/podcast"><i class="fa fa-rss"></i> Podcasts</a></li>
-    <li><a href="<?= PAGE_BASE; ?>admin/station"><i class="fa fa-bullseye"></i> Station</a></li>
-    <li><a href="<?= PAGE_BASE; ?>admin/config"><i class="fa fa-gears"></i> Config</a></li>
+<ul>
+    <li><a href="<?= PAGE_BASE; ?>"><i class="fa fa-home"></i> Home</a></li>
+    <?php if($_u->isAuth()) : ?><li><a href="<?= PAGE_BASE; ?>admin/show"><i class="fa fa-hand-spock-o"></i> Shows</a></li><?php endif; ?>
+    <?php if($_u->isAuth()) : ?><li><a href="<?= PAGE_BASE; ?>admin/schedule"><i class="fa fa-calendar"></i> Schedule</a></li><?php endif; ?>
+    <?php if($_u->isAuth()) : ?><li><a href="<?= PAGE_BASE; ?>admin/podcast"><i class="fa fa-rss"></i> Podcasts</a></li><?php endif; ?>
+    <?php if($_u->isAuth()) : ?><li><a href="<?= PAGE_BASE; ?>admin/station"><i class="fa fa-bullseye"></i> Station</a></li><?php endif; ?>
+    <?php if($_u->isAuth()) : ?><li><a href="<?= PAGE_BASE; ?>admin/config"><i class="fa fa-gears"></i> Config</a></li><?php endif; ?>
+    <?php if($_u->isAuth()) : ?><li><a href="<?= PAGE_BASE; ?>logout"><i class="fa fa-power-off"></i> Logout</a></li><?php endif; ?>
+    <?php if(!$_u->isAuth()) : ?><li><a href="<?= PAGE_BASE; ?>login"><i class="fa fa-plug"></i> Login</a></li><?php endif; ?>
 </ul>
