--- a/htdocs/css/page.css
+++ b/htdocs/css/page.css
@@ -1,3 +1,40 @@
+.button-open-mainmenu {
+  background-color: inherit;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  z-index: 1000;
+}
+.main-navigation {
+  text-align: center;
+  position: absolute;
+  right: 0px;
+  width: 100%;
+  padding: 10px;
+  z-index: 4000;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+.main-navigation ul {
+  margin: 0;
+  padding: 0;
+}
+.main-navigation ul li {
+  list-style: none;
+  display: inline-block;
+}
+.main-navigation ul li a {
+  padding: 10px 70px 10px 70px;
+  font-size: 2em;
+  line-height: 5em;
+  color: #fff;
+  text-decoration: none;
+  display: block;
+}
+.main-navigation .button-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
 .home .show-row .show-title {
   font-size: 7em;
   font-weight: bold;
