--- a/htdocs/source/module/admin/view/config/form.phtml
+++ b/htdocs/source/module/admin/view/config/form.phtml
@@ -12,7 +12,7 @@
                 <div class="col-xs-6">
                     <input type="text" name="configForm[<?= $key; ?>]" value="<?= $c; ?>" class="form-control">
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-6 config-label">
                     <?= $key; ?>
                 </div>
             </div>
