--- a/src/source/module/admin/view/index/config.phtml
+++ b/src/source/module/admin/view/index/config.phtml
@@ -14,3 +14,6 @@ global $_p, $_c;
 <div class="col-xs-12" id="FormConfig">
     <?= $_c -> partial('config/form', $action); ?>
 </div>
+<div class="col-xs-12" id="FormConfigDate">
+    <?= $_c -> partial('config/form_date', $action); ?>
+</div>
