set date and time on config page

--- a/htdocs/source/module/admin/view/config/form_date.phtml
+++ b/htdocs/source/module/admin/view/config/form_date.phtml
@@ -15,7 +15,7 @@
             </div>
 
             <div class="mt">
-                <input type="text" name="configFormDate[hour]" value="<?= date('h'); ?>" class="form-control" placeholder="hh">
+                <input type="text" name="configFormDate[hour]" value="<?= date('H'); ?>" class="form-control" placeholder="hh">
                 :
                 <input type="text" name="configFormDate[minute]" value="<?= date('i'); ?>" class="form-control" placeholder="mm">
                 : 00
