--- a/htdocs/source/module/admin/view/schedule/table.phtml
+++ b/htdocs/source/module/admin/view/schedule/table.phtml
@@ -1,19 +1,18 @@
+<? $days = array('Mo','Tu','We','Th','Fr','Sa','Su'); ?>
     <div class="schedule-header-row">
-        <div class="col-xs-1 schedule-col"><h3>Mo</h3></div>
-        <div class="col-xs-1 schedule-col"><h3>Tu</h3></div>
-        <div class="col-xs-1 schedule-col"><h3>We</h3></div>
-        <div class="col-xs-1 schedule-col"><h3>Th</h3></div>
-        <div class="col-xs-1 schedule-col"><h3>Fr</h3></div>
-        <div class="col-xs-1 schedule-col"><h3>Sa</h3></div>
-        <div class="col-xs-1 schedule-col"><h3>Su</h3></div>
+        <? $i=1; foreach($days as $d) :?>
+        <? $today_class=''; if($action['today'] == $i) : $today_class = 'today'; endif; ?>
+            <div class="col-xs-1 schedule-col <?= $today_class; ?>"><h3><?= $d; ?></h3></div>
+        <? $i++; endforeach; ?>
     </div>
     <div class="schedule-row">
         <? foreach($action['schedule'] as $day => $s) : ?>
-        <div class="col-xs-1 schedule-day-col">
+        <? $today_class=''; if($action['today'] == intval($day)) : $today_class = 'today'; endif; ?>
+        <div class="col-xs-1 schedule-day-col  <?= $today_class; ?>">
         <? foreach($s as $item) : ?>
             <div class="schedule-item" data-percent="<?= $item['start_percent']; ?>" data-weekday="<?= $day; ?>" data-hour="<?= $item['h']; ?>" data-minute="<?= $item['m']; ?>" data-show="<?= $item['show']; ?>">
                 <a href="" class="btn btn-small schedule-delete"><i class="fa fa-times"></i></a>
-                <a href="" class=" schedule-title"" data-show="<?= $item['show']; ?>" style="border-bottom:2px solid <?= $action['shows'][$item['show']]['color']; ?>;"><strong><?= $item['show']; ?></strong>
+                <a href="" class=" schedule-title"" data-show="<?= $item['show']; ?>" style="border-bottom:2px solid <?= $action['shows'][$item['show']]['color']; ?>;"><strong> <?= $action['shows'][$item['show']]['name']; ?></strong>
                 <span class="time"><?= $item['h'].':'.fillLeadingZero($item['m']); ?></span></a>
             </div>
         <? endforeach; ?>
