--- a/htdocs/css/fonts.css
+++ b/htdocs/css/fonts.css
@@ -2,23 +2,23 @@
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 400;
-	src: local('Roboto'), local('Roboto-Regular'), url(css/fonts/roboto-400-normal.woff2) format('woff'), url(css/fonts/roboto-400-normal.woff) format('woff');
+	src: local('Roboto'), local('Roboto-Regular'), url(fonts/roboto-400-normal.woff2) format('woff'), url(fonts/roboto-400-normal.woff) format('woff');
 }
 @font-face {
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 500;
-	src: local('Roboto Medium'), local('Roboto-Medium'), url(css/fonts/roboto-500-normal.woff2) format('woff'), url(css/fonts/roboto-500-normal.woff) format('woff');
+	src: local('Roboto Medium'), local('Roboto-Medium'), url(fonts/roboto-500-normal.woff2) format('woff'), url(fonts/roboto-500-normal.woff) format('woff');
 }
 @font-face {
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 700;
-	src: local('Roboto Bold'), local('Roboto-Bold'), url(css/fonts/roboto-700-normal.woff2) format('woff'), url(css/fonts/roboto-700-normal.woff) format('woff');
+	src: local('Roboto Bold'), local('Roboto-Bold'), url(fonts/roboto-700-normal.woff2) format('woff'), url(fonts/roboto-700-normal.woff) format('woff');
 }
 @font-face {
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 900;
-	src: local('Roboto Black'), local('Roboto-Black'), url(css/fonts/roboto-900-normal.woff2) format('woff'), url(css/fonts/roboto-900-normal.woff) format('woff');
+	src: local('Roboto Black'), local('Roboto-Black'), url(fonts/roboto-900-normal.woff2) format('woff'), url(fonts/roboto-900-normal.woff) format('woff');
 }
